#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([fwebserver], [1.0], [hjy322@gmail.com])
AC_CONFIG_SRCDIR([client.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(fwebserver, 1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([bzero gethostbyname inet_ntoa socket strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
